[package]
name = "sui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo", "string"] }
config = "0.13.2"
glob = "0.3.0"
lazy_static = "1.4.0"
libc = "0.2.137"
serde = { version = "1.0.148", features = ["derive"] }
